{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 22,
  "lineage": "d9f61f75-ca7a-18c4-4de6-97b003d09d8c",
  "resources": [
    {
      "module": "module.db_test",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.db_test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:391807337052:security-group/sg-65782723",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-65782723",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-a8cc5fd0"
          }
        }
      ]
    },
    {
      "module": "module.Ubuntu-1",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.Ubuntu-1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:391807337052:security-group/sg-65782723",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-65782723",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-a8cc5fd0"
          }
        }
      ]
    },
    {
      "module": "module.db_test",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.db_test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:391807337052:vpc/vpc-a8cc5fd0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-870729ed",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-7ad85002",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-a8cc5fd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a7e39edc",
            "owner_id": "391807337052",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.Ubuntu-1",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.Ubuntu-1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:391807337052:vpc/vpc-a8cc5fd0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-870729ed",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-7ad85002",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-a8cc5fd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a7e39edc",
            "owner_id": "391807337052",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.Ubuntu-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.Ubuntu-1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c94f9acb4ba21b2",
            "arn": "arn:aws:ec2:us-west-2:391807337052:instance/i-0be9a6b0f21375880",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0be9a6b0f21375880",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kun-IAM-keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-09d097b39bc807d2e",
            "private_dns": "ip-172-31-30-119.us-west-2.compute.internal",
            "private_ip": "172.31.30.119",
            "public_dns": "ec2-34-219-29-90.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.29.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08da227c23c1df224",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5674992e",
            "tags": {
              "Name": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-65782723"
            ]
          }
        }
      ]
    }
  ]
}